src/internal/vm/snapshots/hebi__internal__vm__tests__call_fn_with_args__error_not_enough_args.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
fn test(v):
  return v

test()


# Result:
runtime error: expected 1 arg, got 0
