src/internal/vm/snapshots/hebi__internal__vm__tests__call_fn_with_args__error_too_many_args.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
fn test(v):
  return v

test(100, 100)


# Result:
runtime error: expected 1 arg, got 2
